--- a/siswa_dashboard.html
+++ b/siswa_dashboard.html
@@ -5,32 +5,42 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>🎓 Dashboard Siswa</title>
 <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg-gray-100 font-sans">
 
-<div class="max-w-4xl mx-auto mt-10 bg-white p-6 rounded-xl shadow-lg">
+<div class="max-w-5xl mx-auto mt-10 bg-white p-6 rounded-xl shadow-lg">
   <div class="flex justify-between items-center mb-6">
     <h2 class="text-2xl font-bold text-blue-700">🎓 Dashboard Siswa</h2>
     <button id="logoutBtn" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Logout</button>
   </div>
 
-  <!-- Profil Siswa -->
-  <div id="profilSection" class="mb-8">
+  <!-- Profil -->
+  <section id="profilSection" class="mb-8">
     <h3 class="text-lg font-semibold text-gray-800 mb-2">👤 Profil Siswa</h3>
     <div id="profilData" class="bg-gray-50 p-4 rounded border border-gray-200"></div>
-  </div>
+  </section>
+
+  <!-- Grafik -->
+  <section id="grafikSection" class="mb-10">
+    <h3 class="text-lg font-semibold text-gray-800 mb-2">📈 Grafik Nilai Assessment</h3>
+    <div class="bg-gray-50 p-4 rounded border border-gray-200">
+      <canvas id="nilaiChart" height="120"></canvas>
+      <p id="noChartData" class="text-gray-500 text-sm hidden mt-2">Belum ada data grafik untuk ditampilkan.</p>
+    </div>
+  </section>
 
   <!-- Assessment -->
-  <div id="assessmentSection" class="mb-8">
+  <section id="assessmentSection" class="mb-8">
     <h3 class="text-lg font-semibold text-gray-800 mb-2">📊 Riwayat Assessment</h3>
     <div id="assessmentList" class="overflow-x-auto bg-gray-50 p-4 rounded border border-gray-200 text-sm"></div>
-  </div>
+  </section>
 
   <!-- Bimbingan -->
-  <div id="bimbinganSection">
+  <section id="bimbinganSection">
     <h3 class="text-lg font-semibold text-gray-800 mb-2">🗂️ Riwayat Bimbingan</h3>
     <div id="bimbinganList" class="overflow-x-auto bg-gray-50 p-4 rounded border border-gray-200 text-sm"></div>
-  </div>
+  </section>
 </div>
 
 <script>
@@ -39,7 +49,6 @@ const GAS_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbxIEL2VC6t9ETvO
 // Cek login
 const userId = localStorage.getItem('userId');
 const userRole = localStorage.getItem('userRole');
-
 if (!userId || userRole !== "Siswa") {
   alert("Akses ditolak. Silakan login sebagai Siswa.");
   window.location.href = "index.html";
@@ -54,20 +63,19 @@ document.getElementById("logoutBtn").addEventListener("click", () => {
 // Ambil data siswa
 async function loadSiswaData() {
   const payload = { action: "getSiswaData", id_siswa: userId };
-
   try {
     const response = await fetch(GAS_WEB_APP_URL, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify(payload)
     });
-
     const result = await response.json();
 
     if (result.status === "success") {
       showProfil(result.profil);
       showAssessment(result.assessments);
       showBimbingan(result.bimbingan);
+      renderChart(result.assessments);
     } else {
       document.getElementById("profilData").innerHTML = `<p class='text-red-600'>${result.message}</p>`;
     }
@@ -77,7 +85,7 @@ async function loadSiswaData() {
   }
 }
 
-// Tampilkan profil
+// Profil
 function showProfil(p) {
   document.getElementById("profilData").innerHTML = `
     <table class="w-full text-sm">
@@ -89,13 +97,12 @@ function showProfil(p) {
   `;
 }
 
-// Tampilkan assessment
+// Assessment Table
 function showAssessment(data) {
   if (!data || data.length === 0) {
     document.getElementById("assessmentList").innerHTML = `<p class="text-gray-500">Belum ada data assessment.</p>`;
     return;
   }
-
   let html = `<table class="min-w-full border-collapse border text-left">
                 <thead><tr class="bg-blue-100">
                   ${Object.keys(data[0]).map(h => `<th class="border px-2 py-1">${h}</th>`).join("")}
@@ -107,13 +114,12 @@ function showAssessment(data) {
   document.getElementById("assessmentList").innerHTML = html;
 }
 
-// Tampilkan bimbingan
+// Bimbingan Table
 function showBimbingan(data) {
   if (!data || data.length === 0) {
     document.getElementById("bimbinganList").innerHTML = `<p class="text-gray-500">Belum ada data bimbingan.</p>`;
     return;
   }
-
   let html = `<table class="min-w-full border-collapse border text-left">
                 <thead><tr class="bg-green-100">
                   ${Object.keys(data[0]).map(h => `<th class="border px-2 py-1">${h}</th>`).join("")}
@@ -123,6 +129,50 @@ function showBimbingan(data) {
   });
   html += "</tbody></table>";
   document.getElementById("bimbinganList").innerHTML = html;
+}
+
+// Grafik Chart.js
+function renderChart(assessments) {
+  if (!assessments || assessments.length === 0) {
+    document.getElementById("noChartData").classList.remove("hidden");
+    return;
+  }
+
+  // Cari kolom yang relevan
+  const subjects = [];
+  const scores = [];
+  assessments.forEach(a => {
+    const mapel = a["Mata Pelajaran"] || a["Mapel"] || a["Pelajaran"];
+    const nilai = parseFloat(a["Nilai"] || a["Skor"] || 0);
+    if (mapel && !isNaN(nilai)) {
+      subjects.push(mapel);
+      scores.push(nilai);
+    }
+  });
+
+  if (subjects.length === 0) {
+    document.getElementById("noChartData").classList.remove("hidden");
+    return;
+  }
+
+  const ctx = document.getElementById("nilaiChart").getContext("2d");
+  new Chart(ctx, {
+    type: "bar",
+    data: {
+      labels: subjects,
+      datasets: [{
+        label: "Nilai Assessment",
+        data: scores,
+        backgroundColor: "rgba(37, 99, 235, 0.6)",
+        borderColor: "rgba(37, 99, 235, 1)",
+        borderWidth: 1
+      }]
+    },
+    options: {
+      scales: { y: { beginAtZero: true, max: 100 } },
+      plugins: { legend: { display: false } }
+    }
+  });
 }
 
 // Jalankan saat halaman dimuat
